--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,10 +13,10 @@ sonar.projectVersion=1.0
 
 # Define multiple binary directories using a comma-separated list
 
-#sonar.java.binaries=**/*.class
+sonar.java.binaries=**/*.class
 #sonar.exclusions=**/*.java
 #sonar.sources=src/main
-#sonar.tests=src/test
+sonar.tests=src/test
 sonar.sources=src/main/java
 sonar.java.binaries=./target/classes
 #sonar.java.test.binaries=target/test-classes
